Changelog Notes:
Motion Sickness Rework (Credit: Spring)
Update Russian Translation (Credit: Hea)